// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wml parser should ignore whitespace outside tags 1`] = `
Array [
  Object {
    "contents": Array [],
    "endTagToken": 5,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Asset",
  },
]
`;

exports[`wml parser should parse a character tag correctly 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "endTagToken": 22,
        "fileURL": "testIcon.png",
        "key": "icon",
        "startTagToken": 14,
        "tag": "Image",
      },
      Object {
        "contents": Array [
          Object {
            "endTagToken": 25,
            "startTagToken": 25,
            "tag": "String",
            "value": "Tess",
          },
        ],
        "endTagToken": 26,
        "startTagToken": 23,
        "tag": "Name",
        "value": "Tess",
      },
      Object {
        "adjective": "hers",
        "endTagToken": 44,
        "object": "her",
        "possessive": "her",
        "reflexive": "herself",
        "startTagToken": 27,
        "subject": "she",
        "tag": "Pronouns",
      },
    ],
    "endTagToken": 45,
    "fileName": "Tess",
    "key": "Tess",
    "player": "testy",
    "startTagToken": 0,
    "tag": "Character",
    "zone": "Library",
  },
]
`;

exports[`wml parser should parse a map tag correctly 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [
          Object {
            "contents": Array [
              Object {
                "endTagToken": 16,
                "startTagToken": 16,
                "tag": "String",
                "value": "Test Map",
              },
            ],
            "endTagToken": 18,
            "startTagToken": 14,
            "tag": "Name",
            "value": "Test Map",
          },
          Object {
            "endTagToken": 27,
            "fileURL": "https://test.com/imageTest.png",
            "key": "ImageTest",
            "startTagToken": 19,
            "tag": "Image",
          },
          Object {
            "contents": Array [],
            "endTagToken": 39,
            "key": "ABC",
            "startTagToken": 28,
            "tag": "Room",
            "x": 200,
            "y": 150,
          },
        ],
        "endTagToken": 40,
        "key": "TestMap",
        "startTagToken": 9,
        "tag": "Map",
      },
    ],
    "endTagToken": 41,
    "fileName": "test",
    "instance": true,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Story",
  },
]
`;

exports[`wml parser should parse a single tag 1`] = `
Array [
  Object {
    "contents": Array [],
    "endTagToken": 5,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Asset",
  },
]
`;

exports[`wml parser should parse a story tag correctly 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [
          Object {
            "contents": Array [
              Object {
                "endTagToken": 16,
                "startTagToken": 16,
                "tag": "String",
                "value": "Vortex",
              },
            ],
            "endTagToken": 17,
            "startTagToken": 14,
            "tag": "Name",
            "value": "Vortex",
          },
          Object {
            "contents": Array [
              Object {
                "endTagToken": 20,
                "startTagToken": 20,
                "tag": "String",
                "value": "Vortex",
              },
            ],
            "endTagToken": 21,
            "spaceAfter": false,
            "spaceBefore": false,
            "startTagToken": 18,
            "tag": "Description",
          },
        ],
        "endTagToken": 22,
        "key": "ABC",
        "startTagToken": 9,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
    ],
    "endTagToken": 23,
    "fileName": "test",
    "instance": true,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Story",
  },
]
`;

exports[`wml parser should parse elements correctly 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [
          Object {
            "as": "power",
            "endTagToken": 24,
            "key": "basePower",
            "startTagToken": 13,
            "tag": "Use",
            "type": "Variable",
          },
          Object {
            "endTagToken": 33,
            "key": "overview",
            "startTagToken": 25,
            "tag": "Use",
            "type": "Room",
          },
        ],
        "endTagToken": 34,
        "from": "BASE",
        "startTagToken": 8,
        "tag": "Import",
      },
      Object {
        "contents": Array [
          Object {
            "contents": Array [
              Object {
                "endTagToken": 42,
                "startTagToken": 42,
                "tag": "String",
                "value": "Vortex",
              },
            ],
            "endTagToken": 43,
            "startTagToken": 40,
            "tag": "Name",
            "value": "Vortex",
          },
          Object {
            "contents": Array [
              Object {
                "endTagToken": 46,
                "startTagToken": 46,
                "tag": "String",
                "value": "Vortex",
              },
              Object {
                "endTagToken": 47,
                "startTagToken": 47,
                "tag": "Whitespace",
              },
              Object {
                "contents": Array [
                  Object {
                    "endTagToken": 53,
                    "startTagToken": 53,
                    "tag": "String",
                    "value": "(toggle)",
                  },
                ],
                "endTagToken": 54,
                "startTagToken": 48,
                "tag": "Link",
                "to": "toggleOpen",
              },
            ],
            "endTagToken": 55,
            "spaceAfter": false,
            "spaceBefore": false,
            "startTagToken": 44,
            "tag": "Description",
          },
          Object {
            "contents": Array [
              Object {
                "endTagToken": 61,
                "startTagToken": 61,
                "tag": "String",
                "value": "vortex",
              },
            ],
            "endTagToken": 62,
            "from": "DEF",
            "startTagToken": 56,
            "tag": "Exit",
          },
        ],
        "endTagToken": 63,
        "key": "ABC",
        "startTagToken": 35,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
      Object {
        "contents": Array [
          Object {
            "contents": Array [
              Object {
                "contents": Array [
                  Object {
                    "endTagToken": 85,
                    "startTagToken": 85,
                    "tag": "String",
                    "value": "welcome",
                  },
                ],
                "endTagToken": 86,
                "startTagToken": 80,
                "tag": "Exit",
                "to": "DEF",
              },
            ],
            "endTagToken": 87,
            "key": "ABC",
            "startTagToken": 75,
            "tag": "Room",
            "x": undefined,
            "y": undefined,
          },
        ],
        "dependencies": Array [
          Object {
            "endTagToken": 74,
            "on": "open",
            "startTagToken": 69,
            "tag": "Depend",
          },
        ],
        "endTagToken": 88,
        "if": "open",
        "startTagToken": 64,
        "tag": "Condition",
      },
      Object {
        "contents": Array [
          Object {
            "contents": Array [
              Object {
                "endTagToken": 96,
                "startTagToken": 96,
                "tag": "String",
                "value": "Welcome",
              },
            ],
            "endTagToken": 97,
            "startTagToken": 94,
            "tag": "Name",
            "value": "Welcome",
          },
        ],
        "endTagToken": 98,
        "key": "DEF",
        "startTagToken": 89,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
      Object {
        "default": "false",
        "endTagToken": 107,
        "key": "open",
        "startTagToken": 99,
        "tag": "Variable",
      },
      Object {
        "endTagToken": 116,
        "key": "toggleOpen",
        "src": "open = !open",
        "startTagToken": 108,
        "tag": "Action",
      },
      Object {
        "dependencies": Array [
          Object {
            "endTagToken": 130,
            "on": "open",
            "startTagToken": 125,
            "tag": "Depend",
          },
        ],
        "endTagToken": 131,
        "key": "closed",
        "src": "!open",
        "startTagToken": 117,
        "tag": "Computed",
      },
    ],
    "endTagToken": 132,
    "fileName": "test",
    "key": "Test",
    "startTagToken": 0,
    "tag": "Asset",
  },
]
`;

exports[`wml parser should parse one level of nesting 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [],
        "endTagToken": 10,
        "key": "ABC",
        "startTagToken": 5,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
    ],
    "endTagToken": 11,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Asset",
  },
]
`;
